# doujia

./: .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  conftest.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: push.yaml
hsbc/: addr.js  app.js  unbill.js  vendor.js
src/doujia/__tests__/: main.bean  test_saving.py  test_test_framework.py
src/doujia/extensions/: Dashboard.js  Holdings.js  Portfolio.js  dashboard.py  dashboard_logic.py  holdings.py  portfolio.py  portfolio_logic.py
src/doujia/extensions/__tests__/: conftest.py  test_dashboard.py  test_dashboard_logic.py  test_portfolio.py  typing.py
src/doujia/extensions/templates/: Dashboard.html  Holdings.html  Investment.html  Portfolio.html  _holdings_macro.html  _holdings_table.html  _overview.html  _report.html  style.css
src/doujia/generator/: auto_depreciation.py  forecast.py
src/doujia/generator/__tests__/: test_auto_depreciation.py  test_forecast.py
src/doujia/hsbc/: cipher.py  hsbc_importer.py
src/doujia/hsbc/__tests__/: test_cipher.py  test_hsbc_encrypted.py
src/doujia/plugins/: balance_checker.py  forecast.py
src/doujia/plugins/__tests__/: test_balance_checker.py
src/doujia/portfolio/: processor.py
src/doujia/post_processor/: interpolate_posting.py  merger.py  transaction_categorizer.py  truncate_meta.py
src/doujia/post_processor/__tests__/: test_interpolate_posting.py  test_merger.py  test_transaction_categorizer.py  test_truncate_meta.py
src/doujia/price/: cache.py  price_map.py  yahoo.py
src/doujia/report/: balance.py  cumulative_balance.py  daily.py  holding.py  investment.py  nav.py  pnl.py  portfolio_returns.py  pushover.py  saving.py  summerize.py  util.py
src/doujia/report/__tests__/: test_balance.py  test_cumulative_balance.py  test_daily.py  test_holding.py  test_nav.py  test_pnl.py  test_portfolio.py  test_summerize.py
src/doujia/report/portfolio/: data.py  holding.py  portfolio.py  stat.py
src/doujia/server/: __init__.py  app.py  config.py
src/doujia/server/__tests__/: beangrow.pbtxt  main.bean  test_cors.py  test_server_ccb.py
src/doujia/server/bootstrap/: scheduler.py  setup_app.py
src/doujia/server/controller/: balance.py  importer.py  portfolio.py
src/doujia/server/filter/: auth.py  user.py
src/doujia/server/logic/: ccb.py  cmb_encrypted.py  common.py  hsbc.py  hsbc_cn_asset.py  hsbc_current.py  hsbc_encrypted.py  hsbc_hk_credit_card.py  ledger.py  (+1 more)
src/doujia/utils/: cmptest.py  util.py
(+13 files in other folders)
