[project]
name = "doujia"
version = "0.1.0"
description = "Yuchen's personal beancount ledger project"
authors = [{ name = "e7h4n", email = "perfectworks@gmail.com" }]
dependencies = [
    "setuptools>=69.2.0",
    "Flask>=3.0.2",
    "beancount>=3.0.0",
    "beangrow@git+https://github.com/beancount/beangrow.git",
    "beanquery@git+https://github.com/beancount/beanquery.git@v0.2.0",
    "fava>=1.30.2",
    "frozendict>=2.4.0",
    "logzero>=1.7.0",
    "certifi>=2024.8.30",
    "passkeys>=1.1.3",
    "flask-cors>=5.0.0",
    "pytest-mock>=3.14.0",
    "Flask-APScheduler>=1.13.1",
    "requests>=2.32.3",
    "GitPython>=3.1.44",
    "pycryptodome>=3.21.0",
    "gmssl>=3.2.2",
]
requires-python = "~=3.12.0"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "coverage",
    "freezegun",
    "pyfakefs",
    "pytest",
    "pytest-timeout",
    "pytest-cov",
    "pytest-env",
]

[tool.setuptools.package-data]
"doujia.extensions" = ["templates/*.html", "*.js", "*.css"]

[tool.ruff]
line-length = 120
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "RUF", "UP"]
ignore = []

[tool.coverage.run]
branch = true
source = ["src/doujia"]
omit = ["**/__tests__/*", "**/__init__.py"]
